# vkton

./: .gitignore  README.md  main.py  new_version.bat  pyproject.toml  requirements.txt
cogs/: maincog.py
utils/: bot.py  classes.py  config.py  connect.py  errors.py  objects.py  ui.py
vkton/: __init__.py  bot.py  classes.py  config.py  objects.py
